Release Notes for Cppcheck 2.18

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
- Support for building with Qt 5 will be removed in Cppcheck 2.19.
-

Other:
- Updated Qt to 6.9.0 (official Windows release only).
- added CMake target `run-clang-tidy-csa` to run Clang Static Analyzer
- added CMake option `ENABLE_CSA_ALPHA` to enable the Clang Static Analyzer alpha checkers
- Updated TinyXML-2 to v11.0.0
- The minimum supported Python version has been bumped to 3.7.
- CMake will now unconditionally use Boost.Containers if available. If CMake option `USE_BOOST` is specified it will now bail out when it is not found.
- Fix checking a project that contains several project file entries for the same file.
- Fixed --file-filter matching of looked up files in provided paths.
-