@@ -1,7 +1,7 @@
 Release Notes for Cppcheck 2.18
 
 New checks:
--
+- Warn about cast from non-hexadecimal integer literal to pointer
 
 Improved checking:
 -
@@ -25,4 +25,5 @@ Other:
 - CMake will now unconditionally use Boost.Containers if available. If CMake option `USE_BOOST` is specified it will now bail out when it is not found.
 - Fix checking a project that contains several project file entries for the same file.
 - Fixed --file-filter matching of looked up files in provided paths.
+- Split up cstyleCast checker
 -
